# upngo-rs

./: .gitignore  Cargo.toml  build.rs  points-of-interest.md
.shadowenv.d/: .gitignore  dev.lisp
src/: accounts.rs  client.rs  init.rs  lib.rs  main.rs  ping.rs  rfc4217.rs  transactions.rs  webhooks.rs
upbank/: .gitignore  Cargo.toml  README.md  build.rs
upbank/.shadowenv.d/: dev.lisp
upbank/data/: account.json  account_list.json  category.json  category_list.json  rfc4217.xml  tag_list.json  transaction.json  transaction_list.json  webhook.json  webhook_list.json
upbank/src/: account.rs  category.rs  currency.rs  error.rs  lib.rs  macros.rs  resource.rs  response.rs  tag.rs  transaction.rs  util.rs  webhook.rs
upbank/tests/: account_test.rs  shared.rs  transaction_test.rs  util_test.rs
upngo/: Cargo.toml
upngo/src/: main.rs
