[package]
name = "upngo-rs"
version = "0.1.0"
authors = ["Nick Spain <nicholas.spain@stileeducation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
reqwest = "0.10.7"
keyring = "0.9.0"
rpassword = "5.0.0"
