[package]
name = "upngo-rs"
version = "0.1.0"
authors = ["Nick Spain <nicholas.spain@stileeducation.com>"]
edition = "2018"

[lib]
name = "upngo"
path = "src/lib.rs"

[[bin]]
name = "upngo"
path = "src/main.rs"


[dependencies]
argh = "0.1.3"
reqwest = "0.10.7"
keyring = "0.9.0"
rpassword = "5.0.0"
chrono = "0.4.13"
prettytable-rs = "0.8.0"

[build-dependencies]
codegen = "0.1.3"
roxmltree = "0.13.0"
