[package]
name = "upbank"
description = "Client for UpBank's API"
version = "0.0.1"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"
keywords = ["open-banking", "api", "client", "upbank"]
repository = "https://github.com/nick96/upngo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
serde = {version = "1.0", features = ["derive"]}
log = "0.4"
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0.57"
thiserror = "1.0.21"
strum_macros = "0.19.2"
strum = "0.19.2"

[build-dependencies]
codegen = "0.1"
roxmltree = "0.13"

[dev-dependencies]
pretty_env_logger = "0.4"
