[package]
name = "upngo"
version = "0.0.1"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]
edition = "2018"
keywords = ["open-banking", "cli", "upbank"]


[dependencies]
argh = "0.1.3"
upbank = { path = "../upbank" }
url = "2.1.1"
prettytable-rs = "0.8.0"
anyhow = "1.0.32"
pretty_env_logger = "0.4.0"
log = "0.4.11"
chrono = "0.4.15"
